fixed snap scroll

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
   </section>
 
-              <!--!my work section-->
+              <!--my work section-->
   <section class="work-section">
     <div class="work-bg" id="work">
       <div class="work_content">
@@ -120,7 +120,7 @@
       </div>
     </div>
   </section>
-              <!--contact me section-->
+              <!--!contact me section-->
 
   <section class="contact__section">
     <div class="contact__me">
