fixed contact,now the emojis and image interactivity in about

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <p class="hello">Hello there! my name is <span class="JG">Jassem'</span> </p>
         </div>
         <hr class="hr">
-        <p class="typeParagraph">i love <span id="typewriter"></span><span id="About-cursor">|</span></p>
+        <p class="typeParagraph">i love  <span id="typewriter"></span><span id="About-cursor">|</span></p>
       </div>
       <div class="about-container-bg" id="about">
         <div class="about-me_content">
@@ -128,7 +128,7 @@
 
       <div class="contact__container">
         <p class="contact__p">-" Want to collaborate on a project, discuss an idea,  <u class="awesome">or' just say hi  ?"</u></p>
-        <button class="contact__button">Contact` me</button>
+        <button class="contact__button">say` Hi <span class="waveHand">✋</span></button>
       </div>
     </div>
   </section>
