changed fixed units to relatives and removed the ugly scrollbar

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         <img src="src/Dev_Tools'.png" data-work-header="Dev_Tools'" class="work-project" data-project-index="0" data-work-href="Dev_Tools-"draggable="false">
         <img src="src/BookOfFun.png"  data-work-header="BookOfFun"  class="work-project" data-project-index="1" data-work-href=""draggable="false">
         <img src="src/NeuScCalc.png"  data-work-header="NeuScCalc"  class="work-project" data-project-index="2" data-work-href=""draggable="false">
+        <img src="src/Dev_Tools'.png" data-work-header="Dev_Tools'" class="work-project" data-project-index="0" data-work-href="Dev_Tools-"draggable="false">
       </div>
     </div>
   </section>
