added the intersectionObserver animations

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
         <p class="work-desc fadeOut" style="--AnimDelay:1">'Unleash your creativity with our three awesome tools: blob maker, gradient generator, and neumorphism creator. Design and copy the CSS. No more struggling with code—just pure design fun!'</p>
       </div>
       <div class="work-slider fadeOut" style="--quantity:4;--AnimDelay:2" data-mouse-pos="0" data-prev-per="0" data-new-per="0" draggable="false">
-        <img src="src/Dev_Tools'.png" data-work-header="Dev_Tools'" class="work-project" data-project-index="0" data-work-href="Dev_Tools-"draggable="false">
-        <img src="src/BookOfFun.png"  data-work-header="BookOfFun"  class="work-project" data-project-index="1" data-work-href=""draggable="false">
-        <img src="src/NeuScCalc.png"  data-work-header="NeuScCalc"  class="work-project" data-project-index="2" data-work-href=""draggable="false">
-        <img src="src/Dev_Tools'.png" data-work-header="Dev_Tools'" class="work-project" data-project-index="0" data-work-href="Dev_Tools-"draggable="false">
+        <img src="src/Dev_Tools'.png" data-work-header="|Dev_Tools'" class="work-project proj-active" data-project-index="0" data-work-href="Dev_Tools-"draggable="false">
+        <img src="src/BookOfFun.png"  data-work-header="|BookOfFun"  class="work-project" data-project-index="1" data-work-href=""draggable="false">
+        <img src="src/NeuScCalc.png"  data-work-header="|NeuScCalc"  class="work-project" data-project-index="2" data-work-href=""draggable="false">
+        <img src="src/Dev_Tools'.png" data-work-header="|Dev_Tools'" class="work-project" data-project-index="0" data-work-href="Dev_Tools-"draggable="false">
       </div>
     </div>
   </section>
