minor changes,nthng serious

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
           <div class="footer__link--items fadeOut" style="--AnimDelay:3">
             <h1 class="Footer__titles">| Projects</h1>
-            <a href="#">GameApp</a>
+            <a href="https://some-10s3r.github.io/Dev_Tools-/">Dev_Tools'</a>
             <a href="#">Subline2</a>
             <a href="#">Subline3</a>
           </div>
